ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    #    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: "nginx"
  rules:
  - host: www.test.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: multiplication-table-front-service
            port:
              number: 8080
      - pathType: Prefix
        path: /api/calculator
        backend:
          service:
            name: multiplication-table-backend-service
            port:
              number: 9090
